feat(armory): implement dual-mode database system with personal DB option
Core Features:
- Dual-mode architecture: Mode 1 (internal read-only) vs Mode 2 (personal user DB)
- Database manager (ItemsDatabaseManager) with 6 core methods
- Auto-add scraped items with configurable toggle
- Statistics tracking (internal/personal/user-added counts)
- Database reset functionality with confirmation

Configuration:
- Added armory section to config schema (5 keys)
- use_personal_database, personal_db_created, personal_db_path
- auto_add_scraped_items, last_internal_db_version

UI Integration:
- Settings > Armory page with folder path management
- Database mode toggle checkbox with activation flow
- Statistics group (visible in Mode 2)
- Actions group with reset button (visible in Mode 2)
- Import section integration (visible in Mode 2)
- Folder path section with browse/move/open buttons

Backend:
- ItemsDatabaseManager class (Functions/items_database_manager.py)
  - get_active_database_path(): Returns internal or personal DB path
  - search_item(): Search in active database
  - create_personal_database(): Copy internal to personal with metadata
  - add_scraped_item(): Add items with realm deduplication
  - get_statistics(): Return counts for all database types
  - reset_personal_database(): Restore personal DB from internal copy
- PathManager initialization in settings dialog
- Auto-add integration in armory import dialog

Translations:
- Added 30+ armory_settings.* keys (FR/EN/DE)
- enable_personal_db, create_db_*, stats_*, actions_*
- add_scraped_item_* for auto-add prompts

Documentation:
- Created Documentations/Armory/DUAL_MODE_DATABASE_EN.md (650+ lines)
- Updated Documentations/README.md with armory section
- Complete API reference and usage examples

Files Modified:
- Functions/config_schema.py (armory section)
- Functions/items_database_manager.py (NEW - 359 lines)
- Functions/path_manager.py (PathManager import)
- UI/settings_dialog.py (Armory page + folder path)
- U

--- a/Language/de.json
+++ b/Language/de.json
@@ -599,6 +599,38 @@
             "currency": "Währung"
         }
     },
+    "armory_settings": {
+        "group_title": "🗄️ Gegenstands-Datenbank",
+        "enable_personal_db": "Persönliche Datenbank aktivieren",
+        "enable_personal_db_tooltip": "Kopiert die interne Datenbank in Ihren Armory-Ordner, um Importe und Änderungen zu ermöglichen",
+        "mode_info_internal": "Aktueller Modus: Interne Datenbank (nur Lesezugriff)",
+        "mode_info_personal": "Aktueller Modus: Persönliche Datenbank (bearbeitbar)",
+        "create_db_title": "Persönliche Datenbank erstellen",
+        "create_db_message": "Möchten Sie Ihre persönliche Datenbank erstellen?\nDies kopiert die interne Datenbank ({internal_count} Gegenstände) in Ihren Armory-Ordner.",
+        "create_db_success_title": "Datenbank erstellt",
+        "create_db_success_message": "Persönliche Datenbank erfolgreich erstellt\nSpeicherort: {path}",
+        "create_db_error_title": "Erstellungsfehler",
+        "create_db_error_message": "Persönliche Datenbank konnte nicht erstellt werden:\n{error}",
+        "stats_group_title": "📊 Statistiken",
+        "stats_internal_count": "Gegenstände in interner Datenbank:",
+        "stats_personal_count": "Gegenstände in Ihrer Datenbank:",
+        "stats_user_added_count": "Von Ihnen hinzugefügte Gegenstände:",
+        "stats_not_available": "Nicht verfügbar",
+        "actions_group_title": "⚙️ Aktionen",
+        "reset_db_button": "🔄 Meine Datenbank zurücksetzen",
+        "reset_db_tooltip": "Ersetzt Ihre persönliche Datenbank durch eine neue Kopie der internen Datenbank (Ihre eigenen Ergänzungen gehen verloren)",
+        "reset_confirm_title": "Zurücksetzen bestätigen",
+        "reset_confirm_message": "Sind Sie sicher, dass Sie Ihre persönliche Datenbank zurücksetzen möchten?\n\nDies löscht alle manuell hinzugefügten Gegenstände ({user_count} Gegenstände) und stellt die interne Datenbank ({internal_count} Gegenstände) wieder her.\n\nDiese Aktion kann nicht rückgängig gemacht werden.",
+        "reset_success_title": "Datenbank zurückgesetzt",
+        "reset_success_message": "Persönliche Datenbank erfolgreich zurückgesetzt",
+        "reset_error_title": "Zurücksetzungsfehler",
+        "reset_error_message": "Datenbank konnte nicht zurückgesetzt werden:\n{error}",
+        "add_scraped_item_title": "Zu Ihrer Datenbank hinzufügen?",
+        "add_scraped_item_message": "Der Gegenstand '{item_name}' wurde auf Eden gefunden.\nMöchten Sie ihn zu Ihrer persönlichen Datenbank hinzufügen?",
+        "add_scraped_item_always": "Immer automatisch hinzufügen",
+        "add_scraped_success": "Gegenstand hinzugefügt: {item_name}",
+        "add_scraped_error": "Fehler beim Hinzufügen des Gegenstands:\n{error}"
+    },
     "armoury_dialog": {
         "title": "Waffenkammer-Verwaltung - {name} ({realm} - {season})",
         "info": "Verwalten Sie Waffenkammer-Vorlagen, die mit Drittanbieter-Software (Zenkcraft, etc.) erstellt wurden",
