--- a/Language/en.json
+++ b/Language/en.json
@@ -599,6 +599,38 @@
             "currency": "Currency"
         }
     },
+    "armory_settings": {
+        "group_title": "🗄️ Items Database",
+        "enable_personal_db": "Enable personal database",
+        "enable_personal_db_tooltip": "Copy the internal database to your Armory folder to allow imports and modifications",
+        "mode_info_internal": "Current mode: Internal database (read-only)",
+        "mode_info_personal": "Current mode: Personal database (editable)",
+        "create_db_title": "Create Personal Database",
+        "create_db_message": "Do you want to create your personal database?\nThis will copy the internal database ({internal_count} items) to your Armory folder.",
+        "create_db_success_title": "Database Created",
+        "create_db_success_message": "Personal database created successfully\nLocation: {path}",
+        "create_db_error_title": "Creation Error",
+        "create_db_error_message": "Unable to create personal database:\n{error}",
+        "stats_group_title": "📊 Statistics",
+        "stats_internal_count": "Items in internal database:",
+        "stats_personal_count": "Items in your database:",
+        "stats_user_added_count": "Items added by you:",
+        "stats_not_available": "Not available",
+        "actions_group_title": "⚙️ Actions",
+        "reset_db_button": "🔄 Reset My Database",
+        "reset_db_tooltip": "Replace your personal database with a fresh copy of the internal database (your custom additions will be lost)",
+        "reset_confirm_title": "Confirm Reset",
+        "reset_confirm_message": "Are you sure you want to reset your personal database?\n\nThis will delete all your manually added items ({user_count} items) and restore the internal database ({internal_count} items).\n\nThis action is irreversible.",
+        "reset_success_title": "Database Reset",
+        "reset_success_message": "Personal database reset successfully",
+        "reset_error_title": "Reset Error",
+        "reset_error_message": "Unable to reset database:\n{error}",
+        "add_scraped_item_title": "Add to Your Database?",
+        "add_scraped_item_message": "The item '{item_name}' was found on Eden.\nDo you want to add it to your personal database?",
+        "add_scraped_item_always": "Always add automatically",
+        "add_scraped_success": "Item added: {item_name}",
+        "add_scraped_error": "Error adding item:\n{error}"
+    },
     "armoury_dialog": {
         "title": "Armoury Management - {name} ({realm} - {season})",
         "info": "Manage armoury templates created with third-party software (Zenkcraft, etc.)",
