--- a/Language/fr.json
+++ b/Language/fr.json
@@ -599,6 +599,38 @@
             "currency": "Devises"
         }
     },
+    "armory_settings": {
+        "group_title": "🗄️ Base de données d'items",
+        "enable_personal_db": "Activer la base de données personnelle",
+        "enable_personal_db_tooltip": "Copie la base interne dans votre dossier Armory pour permettre les imports et modifications",
+        "mode_info_internal": "Mode actuel : Base de données interne (lecture seule)",
+        "mode_info_personal": "Mode actuel : Base de données personnelle (modifiable)",
+        "create_db_title": "Créer la base personnelle",
+        "create_db_message": "Voulez-vous créer votre base de données personnelle ?\nCeci copiera la base interne ({internal_count} items) dans votre dossier Armory.",
+        "create_db_success_title": "Base créée",
+        "create_db_success_message": "Base de données personnelle créée avec succès\nEmplacement : {path}",
+        "create_db_error_title": "Erreur de création",
+        "create_db_error_message": "Impossible de créer la base de données personnelle :\n{error}",
+        "stats_group_title": "📊 Statistiques",
+        "stats_internal_count": "Items dans la base interne :",
+        "stats_personal_count": "Items dans votre base :",
+        "stats_user_added_count": "Items ajoutés par vous :",
+        "stats_not_available": "Non disponible",
+        "actions_group_title": "⚙️ Actions",
+        "reset_db_button": "🔄 Réinitialiser ma base",
+        "reset_db_tooltip": "Remplace votre base personnelle par une copie fraîche de la base interne (perte de vos ajouts personnels)",
+        "reset_confirm_title": "Confirmer la réinitialisation",
+        "reset_confirm_message": "Êtes-vous sûr de vouloir réinitialiser votre base de données personnelle ?\n\nCeci supprimera tous vos items ajoutés manuellement ({user_count} items) et restaurera la base interne ({internal_count} items).\n\nCette action est irréversible.",
+        "reset_success_title": "Base réinitialisée",
+        "reset_success_message": "Base de données personnelle réinitialisée avec succès",
+        "reset_error_title": "Erreur de réinitialisation",
+        "reset_error_message": "Impossible de réinitialiser la base de données :\n{error}",
+        "add_scraped_item_title": "Ajouter à votre base ?",
+        "add_scraped_item_message": "L'item '{item_name}' a été trouvé sur Eden.\nVoulez-vous l'ajouter à votre base de données personnelle ?",
+        "add_scraped_item_always": "Toujours ajouter automatiquement",
+        "add_scraped_success": "Item ajouté : {item_name}",
+        "add_scraped_error": "Erreur lors de l'ajout de l'item :\n{error}"
+    },
     "armoury_dialog": {
         "title": "Gestion de l'Armurerie - {name} ({realm} - {season})",
         "info": "Gérez les templates d'armurerie créés avec des logiciels tiers (Zenkcraft, etc.)",
