feat(superadmin): add SuperAdmin tools for source database management
## Features
### Backend (Functions/superadmin_tools.py - 359 lines)
- SuperAdminTools class with 5 core methods
- get_database_stats(): retrieve comprehensive statistics
- backup_source_database(): timestamped backups before modifications
- parse_template_files(): multi-file .txt parsing with auto-realm detection
- build_database_from_files(): merge/replace with duplicate removal
- clean_duplicates(): remove items with same name+realm

### UI Integration (UI/settings_dialog.py)
- Page 7: SuperAdmin (conditional - requires --admin flag)
- Build Database section: multi-file selection, realm combo, options (merge/dedup/backup)
- Statistics section: 8 real-time stats (total, realms, size, date) + refresh button
- Advanced Operations section: clean duplicates button
- Side-by-side layout (Statistics 50% + Advanced 50%)

### Security (main.py)
- Triple-layer protection:
  * Layer 1: --admin flag required
  * Layer 2: not sys.frozen (dev-only)
  * Layer 3: conditional UI rendering
- Only accessible via 'python main.py --admin'
- Completely hidden in compiled .exe

### Translations (Language/*.json)
- 40+ keys in FR/EN/DE under 'superadmin.*' namespace
- No emojis in JSON (added in code)
- Navigation item: settings.navigation.superadmin

### Documentation
- Documentations/Settings/SUPERADMIN_TOOLS_EN.md (1100+ lines)
  * Complete technical documentation
  * Security model, API reference, workflows
  * File structure, error handling, testing checklist
- Updated Documentations/README.md
  * Added SUPERADMIN_TOOLS_EN.md to Settings section
  * Updated statistics (27 docs, 14,600+ lines)
  * Added to Recent Updates section
- Updated Documentations/Settings/SETTINGS_ARCHITECTURE_EN.md
  * Page 7 navigation item (conditional)
  * Complete SuperAdmin page description
  * Version history updated for v0.108

## Technical Details
- Target: Data/items_database_src.json (internal read-only database)
- Backups: Data/B

--- a/Language/de.json
+++ b/Language/de.json
@@ -310,6 +310,7 @@
             "herald": "Herald Eden",
             "backup": "Sicherungen",
             "armory": "Waffenkammer",
+            "superadmin": "SuperAdmin",
             "data": "Daten",
             "language": "Sprache",
             "debug": "Debug"
@@ -371,6 +372,11 @@
                 "status_last_update": "🕐 Letzte Aktualisierung:",
                 "status_loading": "Lädt...",
                 "status_no_date": "-"
+            },
+            "superadmin": {
+                "title": "SuperAdmin - Administrator-Tools",
+                "subtitle": "Quell-Datenbank-Verwaltungstools",
+                "warning": "⚠️ Warnung: Diese Tools ändern die Quell-Datenbank.\nNur im Entwicklungsmodus verwenden!"
             }
         },
         "groups": {
@@ -630,6 +636,56 @@
         "add_scraped_item_always": "Immer automatisch hinzufügen",
         "add_scraped_success": "Gegenstand hinzugefügt: {item_name}",
         "add_scraped_error": "Fehler beim Hinzufügen des Gegenstands:\n{error}"
+    },
+    "superadmin": {
+        "title": "SuperAdmin - Verwaltungstools",
+        "warning": "Diese Tools ändern die eingebettete Quelldatenbank. Nur für Entwickler reserviert.",
+        "armory_section_title": "Waffenkammer",
+        "build_group_title": "Quelldatenbank erstellen",
+        "files_label": "Vorlagendateien (.txt):",
+        "select_button": "Auswählen",
+        "no_files_selected": "Keine Dateien ausgewählt",
+        "files_selected": "{count} Datei(en) ausgewählt",
+        "build_button": ".txt-Dateien auswählen",
+        "build_button_tooltip": "Mehrere Vorlagendateien auswählen zum Erstellen der Quell-Datenbank",
+        "realm_label": "Standard-Reich:",
+        "realm_tooltip": "Reich zu verwenden, wenn nicht aus Dateinamen erkannt",
+        "realm_auto": "Automatische Erkennung",
+        "options_merge": "Mit bestehender Datenbank zusammenführen",
+        "options_merge_tooltip": "Neue Gegenstände hinzufügen ohne bestehende zu löschen",
+        "options_remove_duplicates": "Duplikate entfernen (Name + Reich)",
+        "options_remove_duplicates_tooltip": "Doppelte Gegenstände basierend auf Name und Reich vermeiden",
+        "options_auto_backup": "Alte Datenbank automatisch sichern",
+        "options_auto_backup_tooltip": "Backup erstellen vor Änderung der Quell-Datenbank",
+        "build_execute_button": "🚀 Datenbank erstellen",
+        "stats_group_title": "📊 Quell-Datenbank-Statistiken",
+        "stats_title": "Statistiken",
+        "stats_database_name": "Datenbank",
+        "stats_total": "Gesamt-Gegenstände:",
+        "stats_albion": "Albion:",
+        "stats_hibernia": "Hibernia:",
+        "stats_midgard": "Midgard:",
+        "stats_all_realms": "Alle Reiche:",
+        "stats_file_size": "Dateigröße:",
+        "stats_last_updated": "Zuletzt aktualisiert:",
+        "stats_not_available": "Nicht verfügbar",
+        "stats_refresh_button": "🔄 Aktualisieren",
+        "advanced_group_title": "⚙️ Erweiterte Operationen",
+        "clean_duplicates_button": "🧹 Duplikate bereinigen",
+        "clean_duplicates_tooltip": "Doppelte Gegenstände aus Quell-Datenbank entfernen",
+        "clean_removed_count": "Entfernte Gegenstände",
+        "no_files_selected_title": "Keine Dateien",
+        "no_files_selected_message": "Bitte mindestens eine .txt-Datei auswählen",
+        "build_confirm_title": "Erstellung bestätigen",
+        "build_confirm_message": "Quell-Datenbank mit {count} Datei(en) erstellen?\n\nOptionen:\n• Zusammenführen: {merge}\n• Anti-Duplikate: {dedup}\n• Auto-Backup: {backup}",
+        "build_success_title": "Erstellung erfolgreich",
+        "build_error_title": "Erstellungsfehler",
+        "clean_confirm_title": "Duplikate bereinigen",
+        "clean_confirm_message": "Möchten Sie Duplikate aus der Quell-Datenbank entfernen?\n\nEin Backup wird automatisch erstellt.",
+        "clean_success_title": "Bereinigung abgeschlossen",
+        "clean_error_title": "Bereinigungsfehler",
+        "progress_title": "Wird erstellt...",
+        "progress_description": "Verarbeitung der Vorlagendateien"
     },
     "armoury_dialog": {
         "title": "Waffenkammer-Verwaltung - {name} ({realm} - {season})",
