--- a/Language/en.json
+++ b/Language/en.json
@@ -302,6 +302,7 @@
             "herald": "Herald Eden",
             "backup": "Backups",
             "armory": "Armory",
+            "superadmin": "SuperAdmin",
             "data": "Data",
             "language": "Language",
             "debug": "Debug"
@@ -363,6 +364,11 @@
                 "status_last_update": "🕐 Last update:",
                 "status_loading": "Loading...",
                 "status_no_date": "-"
+            },
+            "superadmin": {
+                "title": "SuperAdmin - Administrator Tools",
+                "subtitle": "Source database management tools",
+                "warning": "⚠️ Warning: These tools modify the source database.\nUse only in development mode!"
             }
         },
         "groups": {
@@ -630,6 +636,56 @@
         "add_scraped_item_always": "Always add automatically",
         "add_scraped_success": "Item added: {item_name}",
         "add_scraped_error": "Error adding item:\n{error}"
+    },
+    "superadmin": {
+        "title": "SuperAdmin - Administrative Tools",
+        "warning": "These tools modify the embedded source database. Reserved for developers only.",
+        "armory_section_title": "Armory",
+        "build_group_title": "Build Source Database",
+        "files_label": "Template files (.txt):",
+        "select_button": "Select",
+        "no_files_selected": "No files selected",
+        "files_selected": "{count} file(s) selected",
+        "build_button": "Select .txt Files",
+        "build_button_tooltip": "Select multiple template files to build source database",
+        "realm_label": "Default realm:",
+        "realm_tooltip": "Realm to use if not detected from filename",
+        "realm_auto": "Auto-detection",
+        "options_merge": "Merge with existing database",
+        "options_merge_tooltip": "Add new items without deleting existing ones",
+        "options_remove_duplicates": "Remove duplicates (name + realm)",
+        "options_remove_duplicates_tooltip": "Avoid duplicate items based on name and realm",
+        "options_auto_backup": "Auto-backup old database",
+        "options_auto_backup_tooltip": "Create backup before modifying source database",
+        "build_execute_button": "🚀 Build Database",
+        "stats_group_title": "📊 Source Database Statistics",
+        "stats_title": "Statistics",
+        "stats_database_name": "Database",
+        "stats_total": "Total items",
+        "stats_albion": "Albion:",
+        "stats_hibernia": "Hibernia:",
+        "stats_midgard": "Midgard:",
+        "stats_all_realms": "All realms:",
+        "stats_file_size": "File size:",
+        "stats_last_updated": "Last updated:",
+        "stats_not_available": "Not available",
+        "stats_refresh_button": "🔄 Refresh",
+        "advanced_group_title": "⚙️ Advanced Operations",
+        "clean_duplicates_button": "🧹 Clean Duplicates",
+        "clean_duplicates_tooltip": "Remove duplicate items from source database",
+        "clean_removed_count": "Items removed",
+        "no_files_selected_title": "No Files",
+        "no_files_selected_message": "Please select at least one .txt file",
+        "build_confirm_title": "Confirm Build",
+        "build_confirm_message": "Build source database with {count} file(s)?\n\nOptions:\n• Merge: {merge}\n• Anti-duplicates: {dedup}\n• Auto-backup: {backup}",
+        "build_success_title": "Build Successful",
+        "build_error_title": "Build Error",
+        "clean_confirm_title": "Clean Duplicates",
+        "clean_confirm_message": "Do you want to remove duplicates from the source database?\n\nA backup will be created automatically.",
+        "clean_success_title": "Cleanup Complete",
+        "clean_error_title": "Cleanup Error",
+        "progress_title": "Building...",
+        "progress_description": "Processing template files"
     },
     "armoury_dialog": {
         "title": "Armoury Management - {name} ({realm} - {season})",
