--- a/Language/fr.json
+++ b/Language/fr.json
@@ -310,6 +310,7 @@
             "herald": "Herald Eden",
             "backup": "Sauvegardes",
             "armory": "Armurerie",
+            "superadmin": "SuperAdmin",
             "data": "Données",
             "language": "Langue",
             "debug": "Debug"
@@ -371,6 +372,11 @@
                 "status_last_update": "🕐 Dernière mise à jour:",
                 "status_loading": "Chargement...",
                 "status_no_date": "-"
+            },
+            "superadmin": {
+                "title": "SuperAdmin - Outils Administrateur",
+                "subtitle": "Outils de gestion de la base de données source",
+                "warning": "⚠️ Attention : Ces outils modifient la base de données source.\nUtilisez uniquement en mode développement !"
             }
         },
         "groups": {
@@ -630,6 +636,56 @@
         "add_scraped_item_always": "Toujours ajouter automatiquement",
         "add_scraped_success": "Item ajouté : {item_name}",
         "add_scraped_error": "Erreur lors de l'ajout de l'item :\n{error}"
+    },
+    "superadmin": {
+        "title": "SuperAdmin - Outils Administrateur",
+        "warning": "Ces outils modifient la base de données source embarquée. Usage réservé aux développeurs.",
+        "armory_section_title": "Armurerie",
+        "build_group_title": "Construction Base Source",
+        "files_label": "Fichiers templates (.txt):",
+        "select_button": "Sélectionner",
+        "no_files_selected": "Aucun fichier sélectionné",
+        "files_selected": "{count} fichier(s) sélectionné(s)",
+        "build_button": "Sélectionner fichiers .txt",
+        "build_button_tooltip": "Sélectionner plusieurs fichiers template pour construire la base source",
+        "realm_label": "Royaume par défaut :",
+        "realm_tooltip": "Royaume à utiliser si non détecté depuis le nom de fichier",
+        "realm_auto": "Auto-détection",
+        "options_merge": "Fusionner avec la base existante",
+        "options_merge_tooltip": "Ajouter les nouveaux items sans supprimer les existants",
+        "options_remove_duplicates": "Supprimer les doublons (nom + royaume)",
+        "options_remove_duplicates_tooltip": "Éviter les items en double basés sur nom et royaume",
+        "options_auto_backup": "Sauvegarder automatiquement l'ancienne base",
+        "options_auto_backup_tooltip": "Créer un backup avant de modifier la base source",
+        "build_execute_button": "🚀 Construire la base de données",
+        "stats_group_title": "📊 Statistiques Base Source",
+        "stats_title": "Statistiques",
+        "stats_database_name": "Base de données",
+        "stats_total": "Total d'items :",
+        "stats_albion": "Albion :",
+        "stats_hibernia": "Hibernia :",
+        "stats_midgard": "Midgard :",
+        "stats_all_realms": "Tous royaumes :",
+        "stats_file_size": "Taille du fichier :",
+        "stats_last_updated": "Dernière mise à jour :",
+        "stats_not_available": "Non disponible",
+        "stats_refresh_button": "🔄 Actualiser",
+        "advanced_group_title": "⚙️ Opérations Avancées",
+        "clean_duplicates_button": "🧹 Nettoyer les doublons",
+        "clean_duplicates_tooltip": "Supprimer les items en double dans la base source",
+        "clean_removed_count": "Items supprimés",
+        "no_files_selected_title": "Aucun fichier",
+        "no_files_selected_message": "Veuillez sélectionner au moins un fichier .txt",
+        "build_confirm_title": "Confirmer la construction",
+        "build_confirm_message": "Construire la base source avec {count} fichier(s) ?\n\nOptions :\n• Fusion : {merge}\n• Anti-doublons : {dedup}\n• Backup auto : {backup}",
+        "build_success_title": "Construction réussie",
+        "build_error_title": "Erreur de construction",
+        "clean_confirm_title": "Nettoyer les doublons",
+        "clean_confirm_message": "Voulez-vous supprimer les doublons de la base source ?\n\nUn backup sera créé automatiquement.",
+        "clean_success_title": "Nettoyage terminé",
+        "clean_error_title": "Erreur de nettoyage",
+        "progress_title": "Construction en cours...",
+        "progress_description": "Traitement des fichiers template"
     },
     "armoury_dialog": {
         "title": "Gestion de l'Armurerie - {name} ({realm} - {season})",
